--- a/react-app/src/components/MyPlate/MyPlate.css
+++ b/react-app/src/components/MyPlate/MyPlate.css
@@ -18,6 +18,7 @@
 }
 
 .recipePic {
+	object-fit: cover;
 	width: 100%;
 	height: 73%;
 }
